--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+    <header>
+        <!-- Image and text -->
+        <nav class="navbar navbar-light">
+            <a class="navbar-brand" href="#">
+                <img src="./logo.png" alt="" class="d-inline-block align-top header-logo">
+                GitDemo
+            </a>
+        </nav>
+    </header>
     
 
     <div class="container">
