modified feature/footer functionality

--- a/calculator.html
+++ b/calculator.html
@@ -35,6 +35,10 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <img src="./footer-logo-white.svg" style="height:24px;width:auto;margin-bottom:16px;margin-right: 8px;">
+        &copy; Copyright 2021 Maveric Systems Limited
+    </div>
     
 </body>
 
