--- a/calculator.html
+++ b/calculator.html
@@ -33,7 +33,9 @@
                 </div>
                 <div class="calculator-btn mx-auto p-4">
                     <button type="button" class="btn btn-primary btn-lg btn-block" onclick="add()">Add</button>
-            </div>
+                    <button type="button" class="btn btn-primary btn-lg btn-block mt-4"
+                        onclick="subtract()">Subtract</button>
+                </div>
         </div>
     </div>
     <div class="footer">
