--- a/calculator.html
+++ b/calculator.html
@@ -35,6 +35,8 @@
                     <button type="button" class="btn btn-primary btn-lg btn-block" onclick="add()">Add</button>
                     <button type="button" class="btn btn-primary btn-lg btn-block mt-4"
                         onclick="subtract()">Subtract</button>
+                    <button type="button" class="btn btn-primary btn-lg btn-block mt-4"
+                        onclick="multiply()">Multiply</button>
                 </div>
         </div>
     </div>
